# context-builder

./: .context-builder.toml  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  SKILL.md  cobertura.xml  context-builder.toml  debug_diff.rs  install.sh  tarpaulin-report.html  tarpaulin.toml  test.md  test_diff_identical.rs
.agent/workflows/: terminal-hang-workaround.md
.github/workflows/: ci.yml  release.yml
benches/: context_bench.rs
docs/: demo.cast
docs/research/: Babysitter v0.0.166.md  babysitter_review_context.md  competitive-analysis.md  multi-model-code-review-analysis-v3.md  multi-model-code-review-analysis.md
docs/research/context-files/: cb_demo_full_20260215092514.md  context-builder-deepthink_20260214174601.md  context-builder-deepthink_20260214174629.md  context_20260214175028.md  context_20260214225151.md  context_20260215085302.md  context_20260215085322.md  context_20260215085510.md  context_20260215092339.md  context_v0.8.3_full.md  context_v0.8.3_signatures.md  deep_think_context_v3_20260215221646.md  deep_think_context_v3_full.md  deep_think_context_v3_multimodel.md  deep_think_review_v0.8.0.md  deepthink_context_20260214190729.md  deepthink_context_v2.md  deepthink_context_v2_20260214200732.md  deepthink_context_v2_20260214200812.md  deepthink_context_v2_fixed.md  deepthink_context_v4.md  deepthink_context_v5_20260215111322.md  deepthink_context_v5_20260215111343.md  deepthink_context_v5_20260215111448.md
docs/research/prompts/: clean_benchmark_v6.md  deep_think_prompt_v3_multimodel.md  deepthink_prompt_v2.md  deepthink_prompt_v5.md
docs/research/v2-responses/: context_v2_resp-chat-gpt-5.2.md  context_v2_resp-claude-opus-4.6.md  context_v2_resp-gemini-3-deepthink.md  context_v2_resp-gemini-pro.md  context_v2_resp-glm5-run2.md  context_v2_resp-glm5.md  context_v2_resp-grok.md  context_v2_resp-kimi-k2.5.md  context_v2_resp-minimax-agent.md  context_v2_resp-qwen3-max.md  deepthink_response_v1.md
docs/research/v3-responses/: context_v3_resp-gemini-3-deepthink.md  context_v4_resp-gemini-3-deepthink.md  context_v5_resp-gemini.md  context_v6_resp-gemini.md  deep_think_v3_resp-claude-chatgpt-5.3-codex-xhigh.mc  deep_think_v3_resp-claude-opus-4.6.mc  deep_think_v3_resp-gemini-3-deepthink.md  deep_think_v3_resp-grok.md  deep_think_v3_resp-kimi.md  deep_think_v3_resp-minimax.md
docs/research/v6-responses/: gemini-3-deep-think.md
scripts/: demo.sh  generate_samples.rs  pre-release.sh
src/: cache.rs  cli.rs  config.rs  config_resolver.rs  diff.rs  file_utils.rs  lib.rs  main.rs  markdown.rs  state.rs  token_count.rs  tree.rs
src/tree_sitter/: language_support.rs  mod.rs  signatures.rs  structure.rs  truncation.rs
src/tree_sitter/languages/: c.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
tests/: cli_integration.rs  diff_integration.rs  test_auto_diff.rs  test_binary_file_autodiff.rs  test_comprehensive_edge_cases.rs  test_config_resolution.rs  test_cwd_independence.rs  test_determinism.rs  test_parallel_memory.rs  test_phase4_integration.rs
winget/manifests/i/igorls/context-builder/0.8.2/: igorls.context-builder.installer.yaml  igorls.context-builder.locale.en-US.yaml  igorls.context-builder.yaml
