[package]
name = "context-builder"
version = "0.5.1"
default-run = "context-builder"
edition = "2024"
authors = ["Igor Lins e Silva"]
description = "CLI tool to aggregate directory contents into a single markdown file optimized for LLM consumption"
readme = "README.md"
homepage = "https://github.com/igorls/context-builder"
repository = "https://github.com/igorls/context-builder"
license = "MIT"
keywords = ["cli", "markdown", "documentation", "llm", "context"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
ignore = "0.4.23"
log = "0.4.28"
env_logger = "0.11.8"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
similar = "2.7.0"
tempfile = "3.22.0"
tiktoken-rs = "0.7.0"
once_cell = "1.21.3"
fs2 = "0.4.3"
serde_json = "1.0.143"
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"
encoding_rs = "0.8.35"

[features]
default = ["parallel"]
parallel = ["rayon"]
samples-bin = []

[dev-dependencies]
tempfile = "3.22.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
pretty_assertions = "1.4.1"
serial_test = "3.0"

[[bench]]
name = "context_bench"
harness = false

[[bin]]
name = "generate_samples"
path = "scripts/generate_samples.rs"
required-features = ["samples-bin"]
